--- a/views/consultar.hbs
+++ b/views/consultar.hbs
@@ -5,16 +5,15 @@
 {{> head }}
 
 <body>
-    
+
     <div class="contenedor">
-        <div class="tarjeta">
-            {{!-- Consulta de productos --}}
-            
-        </div>
+        {{!-- Consulta de productos --}}
+        {{> verProductos }}
     </div>
 
     {{!-- Footer --}}
     {{> footer }}
 
 </body>
+
 </html>
