--- a/views/partials/ingresarProducto.hbs
+++ b/views/partials/ingresarProducto.hbs
@@ -1,14 +1,19 @@
-<div class="titulo">
-  <h1>Ingrese el producto</h1>
-</div>
-<div class="formulario">
-  <form class="formEntrada" action="">
-    <label for="">Nombre</label>
-    <input type="text" />
-    <label for="">Precio</label>
-    <input type="number" />
-    <label for="">Url imagén</label>
-    <input type="text" />
-    <button id="btnIngresar">Enviar</button>
-  </form>
+<div class="tarjeta">
+  <div class="titulo">
+    <h1>Ingrese el producto</h1>
+  </div>
+  <div class="formulario">
+    <form class="formEntrada" action="">
+      <label for="">Nombre</label>
+      <input type="text" />
+      <label for="">Precio</label>
+      <input type="number" />
+      <label for="">Url imagén</label>
+      <input type="text" />
+      <div class="contenedor-btn">
+        <button id="btnIngresar">Enviar</button>
+        <button id="btnVer" class="btn btn-primary">Ver productos</button>
+      </div>
+    </form>
+  </div>
 </div>
