Avance en la vista

--- a/views/partials/verProductos.hbs
+++ b/views/partials/verProductos.hbs
@@ -1,3 +1,9 @@
 <div class="contenedor_tabla">
-    
+    {{#if existe }}
+        <ul>
+            {{#each productos}}
+            <li>{{productos.nombre}}</li>
+            {{/each}}  
+        </ul>
+    {{/if}}
 </div>
