--- a/views/partials/verProductos.hbs
+++ b/views/partials/verProductos.hbs
@@ -1,9 +1,22 @@
 <div class="contenedor_tabla">
-    {{#if existe }}
-        <ul>
-            {{#each productos}}
-            <li>{{productos.nombre}}</li>
-            {{/each}}  
-        </ul>
-    {{/if}}
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Nombre</th>
+        <th scope="col">Precio</th>
+        <th scope="col">Imágen</th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#if productos}}
+        {{#each productos}}
+          <tr>
+            <td>{{nombre}}</td>
+            <td>{{precio}}</td>
+            <td class="link">{{imagen}}</td>
+          </tr>
+        {{/each}}
+      {{/if}}
+    </tbody>
+  </table>
 </div>
